<resources>
    <string name="app_name">Free To Play</string>
    <string name="all_games">All Games</string>
    <string name="pc_games">PC Games</string>
    <string name="web_games">Web Games</string>
    <string name="latest_games">Latest Games</string>
    <string name="my_games">My Games</string>
    <string name="nothing_yet">Nothing yet.</string>
    <string name="search_button">Search Button</string>
    <string name="menu_button">Menu Button</string>
    <string name="back_button">Back Button</string>
    <string name="sorry_no_games_available">Sorry, no games available.</string>
    <string name="could_not_fetch_games">Couldn\'t fetch games.</string>
    <string name="ic_connection_error">Connection error</string>
    <string name="scroll_up_content_description">Scroll up to the first list item.</string>
    <string name="filter_games_content_description">Filter games by genres.</string>
    <string name="toggle_favorite_content_description">Toggle favorite game.</string>
    <string name="min_sys_reqs">Minimum System Requirements</string>
    <string name="show_less">(Show less)</string>
    <string name="show_more">(Show More)</string>
    <string name="search">Search</string>
    <string name="clear_search_query">Clear search query</string>
</resources>