...
                    tint = MaterialTheme.colors.onBackground
                )
            }
            Text(
                modifier = Modifier
                    .widthIn(max = 150.dp)
                    .testTag("Bar Title"),
                text = barTitle,
                style = MaterialTheme.typography.h6,
                maxLines = 1,
                overflow = TextOverflow.Ellipsis
            )
            IconButton(onClick = onSearch) {
...
            val gridState = rememberLazyGridState()
            val scope = rememberCoroutineScope()
            val randomUrls = remember(games) { games.getRandomUrls() }
            LazyVerticalGrid(
                columns = GridCells.Fixed(2),
                state = gridState,
                modifier = Modifier.testTag("Games")
            ) {
                header {
                    CarouselView(
                        modifier = Modifier
                            .requiredHeight(260.dp)
                            .fillMaxWidth()
...
